# LIT

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_lit.sh  run_lit_containerized.sh
LIT/: cli.py  inference.py  inpaint_image.py  train_ddpm.py
LIT/data/: datasets.py  transforms.py
LIT/networks/: DiffusionUnet.py
LIT/scripts/: run_lit.sh  run_lit_containerized.sh  run_training_docker.sh
LIT/utils/: download_checkpoints.py
containerization/: Dockerfile  Dockerfile_experimental  build_docker.sh  build_singularity.sh
fastsurfer_lit/: cli.py  inference.py  inpaint_image.py  train_ddpm.py
fastsurfer_lit/data/: datasets.py
fastsurfer_lit/networks/: DiffusionUnet.py  interpolation_layer.py
fastsurfer_lit/postprocessing/: hemi.DKTatlaslookup_lesion.txt  smooth_aparc.py
fastsurfer_lit/scripts/: run_lit.sh  run_lit_containerized.sh
lit/: inpaint_image.py
lit/data/: conform.py  datasets.py
lit/postprocessing/: DKTatlaslookup_lesion.txt  lesion_to_segmentation.py  lesion_to_surface.py
lit/utils/: download_checkpoints.py  plotting.py  utils.py
